[package]
name = "surreal"
version = "0.0.1"
authors = ["swerdloj <swerdloj@andrews.edu>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.0"
wgpu = "0.5.2"
futures = "0.3.5"

[dependencies.sdl2]
version = "0.34.2"
features = ["raw-window-handle"]