[package]
name = "surreal"
version = "0.0.1"
authors = ["swerdloj <swerdloj@andrews.edu>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
frame-time = []

[dependencies]
paste = "1.0.0"
wgpu = "0.6.0"
futures = "0.3.5"
# TEMP: Update to official wgpu_glyph if they do something about StagingBelt
# wgpu_glyph = "0.10.0"
wgpu_glyph = { git = "https://github.com/rukai/wgpu_glyph/", branch = "update_wgpu" }
glyph_brush = "0.7.0"
bytemuck = "1.4.1"
glsl-to-spirv = "0.1.7"
cgmath = "0.17.0"
image = "0.23.10"

proc-macros = { path = "./proc_macros" }

[dependencies.sdl2]
version = "0.34.2"
features = ["raw-window-handle"]